adjust dashboard month summary logic to sync